regression_tests/snap/check/teststm7/teststm7.err
================================================================================

                      PROGRAM SNAP  Version 2.7.14-3f3f047

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  5 2018 13:25:47

================================================================================
                     Run at  7-SEP-2018 09:39:24 by ccrook




================================================================================
                                                             7-SEP-2018 09:39:24

                                 ERROR SUMMARY

================================================================================

Error: Networks to merge have incompatible coordinate systems

Error: Errors encountered reading coordinate file
       Line 4: File teststm7.snp

Error: The command file is not correct
